--- a/second/src/main/resources/templates/holiday.html
+++ b/second/src/main/resources/templates/holiday.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Holiday</title>
 </head>
 <body>
-<p th:each="holiday : ${holidays}" th:text="${holiday.date}"></p>
+<h1 th:text="${today}"></h1>
+<br>
+<form th:action="@{/holiday}">
+    <label for="month">Miesiąc:</label>
+    <input id="month" name="month" type="number">
+    <br>
+    <label for="year">Rok:</label>
+    <input id="year" name="year" type="number" required>
+    <br>
+    <button type="submit" name="country" th:value="${country}">Oblicz dni wolne</button>
+</form>
+
+<br>
+<p th:if="${freeDays}" style="color: green;">Dni wolne: <span th:text="${freeDays}"></span></p>
+
+<form th:action="@{/holiday}">
+    <label for="days">Podaj liczbę dni roboczych:</label>
+    <input type="number" id="days" name="days">
+    <br>
+    <button type="submit" name="country" th:value="${country}">Oblicz</button>
+</form>
+
+<br>
+<p th:if="${deadline}">Deadline: <span th:text="${deadline}"></span></p>
+
 </body>
 </html>
